--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <!-- head definitions go here -->
-    </head>
+    </head><meta property="fb:pages" content="101023172141266" />
     <body>
         <!-- the content goes here -->
     </body>
-</html>101023172141266
+</html>
